www/css/style-howmany.css
body { margin: .5em; }
.hide { display: none; }
#correct { margin-top: 0; }
.body-copy h1, .body-copy h2, .body-copy h3, .body-copy p { margin-bottom: .5em; }
input#timer {
    border: 0;
    font-size: 120%;
}
input#answer { }
input.wrong { color: red; }
h1, h2, h3, h4, h5, p, ul, ol, button {
    font-family: 'Open Sans Condensed', sans-serif;
    color: #333;
    font-size: 1.5em;
}
input {
    font-family: 'Open Sans', sans-serif;
    font-weight: bold;
    color: #333;
    font-size: 1.5em;
}
h1 {
    text-transform: uppercase;
    width: 100%;
    text-align: center;
    border-top: 2px solid #aaa;
    border-bottom: 2px solid #aaa;
    letter-spacing: 1.64px;
    font-size: 1.3em;
}
h3 {
    font-size: 30px;
    clear: both;
}
button:hover { cursor: pointer; }
button {
    text-transform: uppercase;
    background-color: #136DF8;
    color: white;
    height: 43px;
}
button#start-it {
    width: 443px;
    float: left;
}
button#end-it:hover { color: red; }
button#end-it {
    width: 200px;
    background-color: white;
    color: #333;
    float: left;
    border: 0;
    margin-left: 5px;
    margin-top: 4px;
}
form input#timer { 
    font-size: 35px;
    padding-left: 40px;
}
#answer_field { float: left; }
#answer_field input {
    padding: 5px;
    width: 343px;
    height: 43px;
    font-size: 24px;
}
#remain { margin: 0; }
#correct, #missed { clear: both; }
.textual li:after { content: ', '; }
.textual li { margin-right: 3px; }
.textual li:last-child:after { content: ' '; }
#correct li, #missed li {
    float: left;
    list-style-type: none;
}
#missed { margin-top: 0; }

.photos li {
    float: left;
    width: 50px;
    height: 50px;
    margin-right: 37px;
    margin-bottom: 24px;
    color: #aaa;
    border: 1px solid #aaa;
    font-size: 48px;
    font-weight: bold;
    text-align: center;
    line-height: 48px;
}
.photos li.correct {
    border: 2px solid #00fa9a;
}
.photos li.incorrect {
    border: 2px solid red;
}
.photos li span.caption {
    display: block;
    font-size: 12px;
    color: black;
    font-weight: normal;
    position: relative;
    bottom: -53px;
    width: 50px;
    text-align: left;
    line-height: 12px;
}
.photos li:after {
    display: block;
    font-size: 12px;
    color: black;
    font-weight: normal;
    position: relative;
    bottom: -53px;
    width: 50px;
    text-align: left;
    line-height: 12px;
}

